added contact area

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -8,5 +8,10 @@
                 overflow: hidden;
             }
         }
-   
+   ul {
+       li{
+           padding-left: 10px;
+           padding-right: 10px;
+       }
+   }
 }
