--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,5 +8,6 @@
 @import "./global.scss";
 @import "./navbar.scss";
 @import "./masthead.scss";
-@import "./portfolio.scss";
+@import "./success.scss";
 @import "./reg-form.scss";
+@import "./contact.scss";
