--- a/css/style.css
+++ b/css/style.css
@@ -10560,6 +10560,33 @@ a.text-dark:hover, a.text-dark:focus {
   overflow: hidden;
 }
 
+.nav-container ul li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.section-bg-cover {
+  background-image: url("/img/success-story.jpg");
+}
+
+.section-bg-cover h2 {
+  background: rgba(0, 0, 0, 0.5);
+  /* Black background with 0.5 opacity */
+  color: white;
+  margin: 0;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.section-bg-cover p {
+  padding: 10px;
+  margin: 0;
+  background: rgba(0, 0, 0, 0.5);
+  /* Black background with 0.5 opacity */
+  color: white;
+  font-weight: bold;
+}
+
 .form-container {
   height: 500px;
   background-color: lightgoldenrodyellow;
@@ -10567,4 +10594,9 @@ a.text-dark:hover, a.text-dark:focus {
 
 .form-container .container {
   padding-top: 50px;
+}
+
+.contact-container h2 {
+  margin-top: 10px;
+  padding-top: 20px;
 }
