--- a/scss/_reg-form.scss
+++ b/scss/_reg-form.scss
@@ -1,5 +1,5 @@
 .form-container{
-    height: 500px;
+    height: auto;
     background-color: lightgoldenrodyellow;
     // background-image: url("/img/form-background.jpg");
   
