--- a/css/style.css
+++ b/css/style.css
@@ -10588,7 +10588,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .form-container {
-  height: 500px;
+  height: auto;
   background-color: lightgoldenrodyellow;
 }
 
@@ -10599,4 +10599,22 @@ a.text-dark:hover, a.text-dark:focus {
 .contact-container h2 {
   margin-top: 10px;
   padding-top: 20px;
+}
+
+.testimonials-container {
+  margin-left: 50px;
+}
+
+.testimonials-container .card {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 300px;
+  margin: 20px;
+}
+
+.testimonials-container h2 {
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
 }
